@@ -11,7 +11,10 @@
     = render 'shared/ref_switcher', destination: 'commits'
 
   .block-controls.hidden-xs.hidden-sm
-    - if create_mr_button?(@repository.root_ref, @ref)
+    - if @merge_request.present?
+      .control
+        = link_to "View #{@merge_request.to_reference}", namespace_project_merge_request_path(@project.namespace, @project, @merge_request), class: 'btn btn-success'
+    - elsif create_mr_button?(@repository.root_ref, @ref)
       .control
         = link_to create_mr_path(@repository.root_ref, @ref), class: 'btn btn-success' do
           = icon('plus')
