@@ -13,11 +13,12 @@
         = text_field_tag :to, params[:to], class: "form-control", required: true
     &nbsp;
     = button_tag "Compare", class: "btn btn-create commits-compare-btn"
-    - if create_mr_button?
+    - if @merge_request.present?
+      = link_to "View #{@merge_request.to_reference}", namespace_project_merge_request_path(@project.namespace, @project, @merge_request), class: 'prepend-left-10 btn'
+    - elsif create_mr_button?
       = link_to create_mr_path, class: 'prepend-left-10 btn' do
         = icon("plus")
         Create Merge Request
-
 
 :javascript
   var availableTags = #{@project.repository.ref_names.to_json};
